# o2l

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DYNAMIC_LIBRARIES.md  LANGUAGE_REFERENCE.md  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: CNAME  README.md  _navbar.md  _sidebar.md  examples-tutorials.md  getting-started.md  index.html  language-reference.md  standard-library.md
docs/api-reference/core/: Bool.md  Double.md  Float.md  Int.md  List.md  Long.md  Map.md  Operators.md  README.md  Set.md  Text.md
docs/api-reference/libraries/: README.md  datetime.md  ffi.md  http-client.md  http-server.md  json.md  math.md
docs/api-reference/system/: README.md  fs.md  io.md  os.md
docs/language/: access-control.md  annotations.md  comments.md  constants.md  control-flow.md  error-handling.md  functions-methods.md  imports.md  iterators.md  memory-management.md  numeric-types.md  overview.md  properties.md  type-system.md
docs/tools/: o2l-fmt.md  o2l-pkg.md
examples/: IO_SYSTEM.md  access_control_demo.obq  access_violation_test.obq  api_client_example.obq  basic_protocol_test.obq  basic_system_demo.obq  chain_test.obq  complete_feature_demo.obq  complex_main.obq  comprehensive_example.obq  comprehensive_import_test.obq  comprehensive_io_test.obq  comprehensive_test.obq  constructor_only.obq  constructor_test2.obq  correct_syntax_test.obq  datetime_demo.obq  debug_combined.obq  debug_individual.obq  debug_length.obq  debug_module.obq  demo.obq  demo_http_server.obq  demo_url.obq  else_if_test.obq  error_test.obq  ffi_comprehensive_test.obq  ffi_debug_test.obq  ffi_function_call_test.obq  ffi_function_calls.obq  ffi_libm_test.obq  ffi_simple_double_test.obq  ffi_test.obq  filesystem_path_demo.obq  final_working_demo.obq  full_protocol_test.obq  full_test.obq  greet_with_param.obq  hello.obq  http_client_demo.obq  (+147 more)
examples/modules/: TestObj.obq  TestObjWithMain.obq
examples/modules/mypackage/: PackageObj.obq
examples/native-libs/math/: CMakeLists.txt  MathLibrary.cpp
examples/project/test_stack_trace/: main.obq  simple_test.obq  test_circular.obq  test_direct_circular.obq  test_simple_circular.obq
examples/project/test_stack_trace/lib/: Calculator.obq  CircularA.obq  CircularB.obq  DataProcessor.obq  DirectA.obq  DirectB.obq  MathUtils.obq  SimpleA.obq  SimpleB.obq
lib/sqlite/: README.md  sqlite_working.obq
lsp/nvim/: MANUAL-SETUP.md  README.md  install.sh  minimal-install.sh  package.json
lsp/nvim/ftdetect/: obq.lua
lsp/nvim/lua/lspconfig/server_configurations/: o2l_lsp.lua
lsp/nvim/lua/mason-obliq-lsp/: init.lua
lsp/nvim/plugin/: o2l.lua
lsp/nvim/syntax/: obq.vim
lsp/nvim/test/: test.obq
src/: Interpreter.cpp  Interpreter.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  main.cpp
src/AST/: BinaryOpNode.cpp  BinaryOpNode.hpp  BlockNode.cpp  BlockNode.hpp  BreakNode.cpp  BreakNode.hpp  ComparisonNode.cpp  ComparisonNode.hpp  ConstDeclarationNode.cpp  ConstDeclarationNode.hpp  ConstructorDeclarationNode.cpp  ConstructorDeclarationNode.hpp  ContinueNode.cpp  ContinueNode.hpp  EnumAccessNode.cpp  EnumAccessNode.hpp  EnumDeclarationNode.cpp  EnumDeclarationNode.hpp  FunctionCallNode.cpp  FunctionCallNode.hpp  IdentifierNode.cpp  IdentifierNode.hpp  IfStatementNode.cpp  IfStatementNode.hpp  ImportNode.cpp  ImportNode.hpp  JsonSerializer.cpp  JsonSerializer.hpp  ListLiteralNode.hpp  LiteralNode.cpp  LiteralNode.hpp  LogicalNode.cpp  LogicalNode.hpp  MapLiteralNode.hpp  MemberAccessNode.cpp  MemberAccessNode.hpp  MethodCallNode.cpp  MethodCallNode.hpp  MethodDeclarationNode.cpp  MethodDeclarationNode.hpp  (+42 more)
src/Common/: Exceptions.cpp  Exceptions.hpp  SourceLocation.hpp  StackFrameGuard.hpp
src/Runtime/: Context.cpp  Context.hpp  DateTimeLibrary.cpp  DateTimeLibrary.hpp  DynamicLibraryManager.cpp  DynamicLibraryManager.hpp  EnumInstance.cpp  EnumInstance.hpp  ErrorInstance.cpp  ErrorInstance.hpp  FFILibrary.cpp  FFILibrary.hpp  HttpClientLibrary.cpp  HttpClientLibrary.hpp  HttpServerLibrary.cpp  HttpServerLibrary.hpp  JsonLibrary.cpp  JsonLibrary.hpp  ListInstance.cpp  ListInstance.hpp  ListIterator.cpp  ListIterator.hpp  MapInstance.cpp  MapInstance.hpp  MapIterator.cpp  MapIterator.hpp  MapObject.cpp  MapObject.hpp  MathLibrary.cpp  MathLibrary.hpp  ModuleLoader.cpp  ModuleLoader.hpp  NativeLibrary.cpp  NativeLibrary.hpp  ObjectInstance.cpp  ObjectInstance.hpp  ProtocolInstance.cpp  ProtocolInstance.hpp  RecordInstance.cpp  RecordInstance.hpp  (+20 more)
src/Runtime/FFI/: FFIEngine.cpp  FFIEngine.hpp  FFITypes.cpp  FFITypes.hpp  SharedLibrary.cpp  SharedLibrary.hpp
tests/: CMakeLists.txt  test_break_statement.cpp  test_continue_statement.cpp  test_datetime_library.cpp  test_else_if_length.cpp  test_ffi_enhanced_types.cpp  test_ffi_library.cpp  test_ffi_marshaling.cpp  test_ffi_pointer_conversions.cpp  test_ffi_simplified.cpp  test_ffi_sqlite_integration.cpp  test_http_client_library.cpp  test_http_server_library.cpp  test_integration.cpp  test_json_library.cpp  test_lexer.cpp  test_main.cpp  test_math_library.cpp  test_o2l_fmt.cpp  test_parser.cpp  test_protocol_signature_validation.cpp  test_protocols.cpp  test_regexp_library.cpp  test_runtime.cpp  test_system_fs_path.cpp  test_system_os_extended.cpp  test_testing_library.cpp  test_text_methods.cpp  test_type_conversions.cpp  test_url_library.cpp
tools/: CMakeLists.txt
tools/o2l-fmt/: CMakeLists.txt  debug_test  debug_test.cpp  detailed_debug  detailed_debug.cpp  formatter.cpp  formatter.hpp  formatter_test  formatter_test.cpp  inline_comment_debug.cpp  main.cpp  regex_test  regex_test.cpp
tools/o2l-fmt/tests/: test_cases.cpp  test_formatter_gtest.cpp
tools/o2l-lsp-server/: CMakeLists.txt  README.md  json.hpp  main.cpp  test-lsp.sh
tools/o2l-pkg/: CMakeLists.txt  Templates.hpp  main.cpp
